stateDiagram-v2

[*] --> IDLE

IDLE --> SCHEDULED: "OBJECTIVE_INGRESS"
SCHEDULED --> EXECUTING: "RUN_DISPATCHED"

EXECUTING --> EVALUATING: "EXECUTION_COMPLETE"
EXECUTING --> REPAIR: "EXECUTION_ERROR"

EVALUATING --> TERMINATED_SUCCESS: "VERDICT_PASS"
EVALUATING --> RETRY: "VERDICT_PARTIAL"
EVALUATING --> TERMINATED_FAIL: "VERDICT_FAIL"

RETRY --> EXECUTING: "RETRY_DISPATCHED"
RETRY --> TERMINATED_FAIL: "RETRY_LIMIT_EXCEEDED"

REPAIR --> EXECUTING: "REPAIR_COMPLETE"
REPAIR --> TERMINATED_FAIL: "REPAIR_ABORT"

TERMINATED_SUCCESS --> [*]
TERMINATED_FAIL --> [*]

state RETRY {
  [*] --> CHECK_ATTEMPTS
  CHECK_ATTEMPTS --> [*]: "attempts < maxAttempts"
  CHECK_ATTEMPTS --> [*]: "attempts >= maxAttempts"
}

state EVALUATING {
  [*] --> APPLY_POLICY
  APPLY_POLICY --> [*]: "policy_ok == true"
  APPLY_POLICY --> [*]: "policy_ok == false"
}

state "OVERRIDE_EVENT (Forward-Only)" as OVERRIDE

IDLE --> OVERRIDE: "OVERRIDE_EVENT"
SCHEDULED --> OVERRIDE: "OVERRIDE_EVENT"
EXECUTING --> OVERRIDE: "OVERRIDE_EVENT"
EVALUATING --> OVERRIDE: "OVERRIDE_EVENT"
RETRY --> OVERRIDE: "OVERRIDE_EVENT"
REPAIR --> OVERRIDE: "OVERRIDE_EVENT"

OVERRIDE --> TERMINATED_SUCCESS: "to_state == TERMINATED_SUCCESS"
OVERRIDE --> TERMINATED_FAIL: "to_state == TERMINATED_FAIL"
OVERRIDE --> EXECUTING: "to_state == EXECUTING"
OVERRIDE --> EVALUATING: "to_state == EVALUATING"
OVERRIDE --> REPAIR: "to_state == REPAIR"
OVERRIDE --> RETRY: "to_state == RETRY"
OVERRIDE --> SCHEDULED: "to_state == SCHEDULED"
